--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
+  <!--------fontaewsome icon ------->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
@@ -124,11 +127,110 @@
     </div>
   </section><!-- End Hero Section -->
 
-  <section>
-    
-  </section>
 
+  <!------------------  about ---------------->
+
+  <br><br>
+  <section>
+    <div class="container-fluid"style="background-color: #f3f3f3;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h4 class="about1">Multiple Innovative <br>Platform</h4>
+            <p class="about2">We provide our clients with a wide range of <br>trading platforms for desktop, web, and mobile to <br> always connect with their investments</p>
+          </div>
+          <div class="col-md-6">
+            <img class="about3" src="assets/img/about/about.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-------- about ------------>
+
+  <!------------Platform----------->
   
+  <section>
+    <div class="container-fluid"style="background-color: #f3f3f3;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="platform" src="assets/img/platform1.png" alt="platform1" >
+            <a href="#" class="platform1">Forex Trading --</a><br><br>
+          </div>
+          <div class="col-md-4">
+            <img class="platform" src="assets/img/platform2.png" alt="platform2">
+            <a href="#" class="platform1">Stock Trading --</a><br><br>
+          </div>
+          <div class="col-md-4">
+            <img class="platform" src="assets/img/platform3.png" alt="platform3">
+            <a href="#" class="platform1">Physical Trading Solution --</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br><br>
+
+  <!------------Platform------------>
+
+  <!----------------banner------------->
+
+  <section>
+    <div class="container-fluid bannerback">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h3 class="about1">Noor Capital Partnership Programs</h3>
+            <p class="about2">Take Advantage of our different market products and distinctive partnership programs. Accelerate your profitability, sales and transform your business to a new level.</p>
+          </div>
+          <div class="col-md-4"></div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-8">
+            <button class="btn btn-light">Institutional</button>
+            <button class="btn btn-light" >Refral Program</button>
+            <br>
+          </div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+
+  <!-----------------banner------------->
+
+  <!-----------------banner1-------------->
+
+  <section>
+    <div class="container-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <img src="assets/img/background/mobile.jpg" alt="mobile">
+          </div>
+          <div class="col-md-6">
+            <h3 style="margin-top: 70px;">Start your trading journey with Noor Capital</h3>
+            <br>
+            <p>
+              <ul>
+                <li class="list"><i class="bi bi-check-circle"></i> Multiple Financial & Investment Solutions</li><br>
+                <li class="list"><i class="bi bi-check-circle"></i> Ultimate and Advanced Trading Platforms</li><br>
+                <li class="list"><i class="bi bi-check-circle"></i> Excellent Investment Advice</li>
+              </ul>
+            </p>
+          </div>
+          <div class="col-md-3"><button class="btn btn-dark"style="margin-top: 120px;margin-left:115px">Try a Demo</button> <br><br>
+            <button class="btn btn-dark" style="margin-left: 115px;">Register real Account</button></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br><br>
+
+  <!-----------------banner1--------------->
 
   <!-- ======= Footer ======= -->
   <footer>
