--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-4">
             <img class="platform" src="assets/img/platform3.png" alt="platform3">
-            <a href="#" class="platform1">Physical Trading Solution --</a>
+            <a href="#" class="platform1">Physical Trad Solution --</a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h3 class="about1">Noor Capital Partnership Programs</h3>
+            <h3 class="about1">Partnership Programs</h3>
             <p class="about2">Take Advantage of our different market products and distinctive partnership programs. Accelerate your profitability, sales and transform your business to a new level.</p>
           </div>
           <div class="col-md-4"></div>
@@ -212,7 +212,7 @@
             <img src="assets/img/background/mobile.jpg" alt="mobile">
           </div>
           <div class="col-md-6">
-            <h3 style="margin-top: 70px;">Start your trading journey with Noor Capital</h3>
+            <h3 style="margin-top: 70px;margin-left: 43px;">Start your trading journey with Noor Capital</h3>
             <br>
             <p>
               <ul>
@@ -222,8 +222,8 @@
               </ul>
             </p>
           </div>
-          <div class="col-md-3"><button class="btn btn-dark"style="margin-top: 120px;margin-left:115px">Try a Demo</button> <br><br>
-            <button class="btn btn-dark" style="margin-left: 115px;">Register real Account</button></div>
+          <div class="col-md-3"><button class="btn btn-dark"style="margin-top: 120px;margin-left:100px">Try a Demo</button> <br><br>
+            <button class="btn btn-dark" style="margin-left: 100px;">Register real Account</button></div>
         </div>
       </div>
     </div>
