--- a/career.html
+++ b/career.html
@@ -47,7 +47,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="">Our Story</a></li>
@@ -84,9 +84,9 @@
           </li>
          
           <li><a href="blog.html">Gallery</a></li>
-          <li><a href="">Career</a></li>
+          <li><a href="career.html">Career</a></li>
          
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -111,187 +111,37 @@
 <!-- breadcrumb end -->
 
 
-<div class="contact-area py-120">
-  <div class="container">
-      <div class="contact-wrapper">
-          <div class="row">
-              <div class="col-md-4">
-                  <div class="contact-content">
-                      <div class="contact-info">
-                          <div class="contact-info-content">
-                              <h5><b>OPEN POSITIONS :</b></h5>
-                              <p>Market resreach analyst</p>
-                              <p>Investment Consultant</p>
-                          </div>
-                      </div>
-                      <!-- <div class="contact-info">
-                          <div class="contact-info-content">
-                              <h5>Expand Your Professional skills With Us</h5>
-                              <p><a href="#"><span class="text-dark"></span></a></p>
-                          </div>
-                      </div> -->
-                      <div class="contact-info">
-                          <div class="contact-info-content">
-                              <h5><b>Email Us</b></h5>
-                              <p><a href="#"><span class="text-dark">info02mail.com</span></a></p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-8 align-self-center">
-                  <div class="contact-form">
-                      <div class="contact-form-header">
-                          <h2>Fill Out For Future Update</h2>
-                          <p> </p>
-                      </div>
-                      <form method="post" action="" id="contact-form">
-                          <div class="row">
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                      <input type="text" class="form-control" name="name"
-                                          placeholder="Your Name" required>
-                                  </div>
-                              </div>
-                              <div class="col-md-6">
-                                  <div class="form-group">
-                                  <input type="tel"  id="phone" name="phone"  class="form-control" name="phone"
-                                           placeholder="Phone Number" required>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <input type="email" class="form-control" name="email"
-                                    placeholder="Your Email" required>  
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <select id="career" name="career" class="form-control">
-                                  <option>Select Your Career</option>
-                                  <option value="Market resreach analyst">Market resreach analyst</option>
-                                  <option value="Investment Consultant">Investment Consultant</option>
-                                  <option value="Dealer">Dealer</option>
-                                  <option value="Trader">Trader</option>
-                                </select>
-                              </div>
-                            </div>
-                          </div>
-                          <button type="submit" class="btn-send-message scrollto animate__animated animate__fadeInUp">Send
-                            <i class="far fa-paper-plane"></i></button>
-                          <div class="col-md-12 mt-3">
-                              <div class="form-messege text-success"></div>
-                          </div>
-                      </form>
+<section class="pageHeader page" data-scroll-fx>
+  <div class="content">
+      <h1 class="fx-slide-up" style="transition-delay: .1s">Careers</h1>
+      <hr style="height:7px;border-width:0;color:#e31e24;background-color:#e31e24;border-radius: 8px">
+      <p class="h4 fx-slide-up" style="transition-delay: .2s">Join our community of traders, investers, and money makers who use the tactics method to advance the stock market and make money.</p>
+  </div>
+</section>
 
-                  </div>
-              </div>
-          </div>
+<div class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <p>Two Sigma interns come from a variety of backgrounds, but share curiosity, passion for trade, stocks, and technology, and a desire to do impactful work.</p>
+        <a href="https://internships.twosigma.com" target="_blank" class="button button--primary">
+          <span class="btn-internship scrollto animate__animated animate__fadeInUp">Explore Open Positions</span>
+        </a>
       </div>
+      <div class="col-md-4">
+        <img src="assets/img/blog/stock.jpg" alt="">
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
 </div>
 
+<br><br>
 
-<!-- ======= Testimonials Section ======= -->
-<div id="testimonials" class="testimonials">
-  <div class="container">
 
-    <div class="testimonials-slider swiper">
-      <div class="swiper-wrapper">
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4></h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Since,2015 Saul invested in the stocks and its reaching heights
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Invester</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Since,2018 Sara invested in the stocks and its reaching heights
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="swiper-slide">
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Trader</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Since,2015 Store invested in the stocks and its reaching heights.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-        </div><!-- End testimonial item -->
-
-        <div class="container-fluid">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-3"></div>
-              <div class="col-md-6">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                  <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  </div>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="assets/img/testimonials/testimonials-1.jpg" class="d-block w-100" alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img src="assets/img/testimonials/testimonials-1.jpg" class="d-block w-100" alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img src="assets/img/testimonials/testimonials-1.jpg" class="d-block w-100" alt="...">
-                      <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
-                </div>
-              </div>
-              <div class="col-md-3"></div>
-            </div>
-          </div>
-        </div>
 
    
-
-   
-
 
   </main><!-- End #main -->
 
