New Changes with various pages
Index changes make it more responsive

--- a/about.html
+++ b/about.html
@@ -92,101 +92,18 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
-
-        <ol id="hero-carousel-indicators" class="carousel-indicators"></ol>
-
-        <div class="carousel-inner" role="listbox">
-
-            <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
-              <div class="carousel-container">
-                <div class="container">
-                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#398378;">Nivesh</span><span style="color: #e31e24;"> Vidha</span></h1>
-                  <p class="animate__animated animate__fadeInUp">Your Partner in Liquidity and Systematic Trading Strategies</p>
-                  <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
-              <div class="carousel-container">
-                <div class="container">
-                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#398378;">Nivesh</span><span style="color: #e31e24;"> Vidha</span></h1>
-                  <p class="animate__animated animate__fadeInUp">Your Partner in Liquidity and Systematic Trading Strategies</p>
-                  <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
-                </div>
-              </div>
-            </div>
-
-        </div>
-
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
-
-      </div>
-    </div>
-  </section>
-  <!-- End Hero Section -->
-
-
-  <!------------------  about  Nivesh Vidha Section---------------->
-  <section>
-
-      <div class="container-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <h2 class="about_head">About Nivesh Vidha</h2>
-              <hr>
-              <p class="about_Para">Nivesh Vidha is a trusted investment advisory firm focused on empowering individuals and organizations 
-                to achieve their financial goals. With our experienced team of professionals, we offer personalized investment solutions 
-                tailored to each client's unique needs and risk tolerance. 
-              <p class="about_Para">
-                Through comprehensive market research and analysis, we identify potential opportunities and manage risks effectively. 
-                Our client-centric approach emphasizes clear communication, transparency, and long-term relationships built on trust.
-              </p> 
-              <p class="about_Para">
-                Whether you're seeking growth, income generation, or a balanced portfolio, Nivesh Vidha provides expert guidance across
-                various investment methods, including stocks, bonds, mutual funds, and real estate. Contact us today and take the first 
-                step towards a successful investment journey with Nivesh Vidha.
-              </p>
-                
-              </p>
-            </div>
-            <div class="col-md-5">
-              <br>
-              <br>
-              <img class="img-fluid" src="assets/img/background/mobile.png" alt="mobile">
-            </div>
-          </div>
-        </div>
-      </div>
-    
-  </section>
-  <!-------- about ------------>
-<!----- Best of Nivesh -->
-
-
-<!---- Best Of Nivesh End-->
-
-
   <!----------------banner------------->
 
   <section>
     <div class="container-fluid bannerback">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <h1 class="about1">Nivesh Vidha Partnership Programs</h1>
-            <p class="about2">Take Advantage of our different market products and distinctive partnership programs. Accelerate your profitability, sales and transform your business to a new level.</p>
+          <div class="col-lg-8 col-md-8 col-sm-12 col-12">
+            <div class="single-page-title">
+              <h6>Ramarut Packaging pvt. ltd.</h6>
+              <span></span>
+              <h2>Our Latest Gallery</h2>
+            </div>
           </div>
           <div class="col-md-4">
             <img class="platform" src="assets/img/platform2.png" alt="platform2">
@@ -199,63 +116,6 @@
   <br>
 <br>
   <!-----------------banner------------->
-
-    <!------------Platform----------->
-  
-    <section>
-      <div class="container-fluid"style="background-color: #f3f3f3;">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform1.png" alt="platform1" >
-              <a href="#" class="platform1">Investment Advisory</a>
-            </div>
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform2.png" alt="platform2">
-              <a href="#" class="platform1">Equity Oriented</a>
-            </div>
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform3.png" alt="platform3">
-              <a href="#" class="platform1">Risk Management</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br>
-  
-  <!------------Platform------------>
-<br>
-<br>
-  <!-----------------banner1-------------->
-
-  <section>
-    <div class="container-fluid">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <img src="assets/img/background/mobile.png" alt="mobile">
-          </div>
-          <div class="col-md-6">
-            <h3 style="margin-top: 70px;">Start your trading journey with Noor Capital</h3>
-            <br>
-            <p>
-              <ul>
-                <li class="list"><i class="bi bi-check-circle"></i> Multiple Financial & Investment Solutions</li><br>
-                <li class="list"><i class="bi bi-check-circle"></i> Ultimate and Advanced Trading Platforms</li><br>
-                <li class="list"><i class="bi bi-check-circle"></i> Excellent Investment Advice</li>
-              </ul>
-            </p>
-          </div>
-          <div class="col-md-3"><button class="btn btn-dark"style="margin-top: 120px;margin-left:115px">Try a Demo</button> <br><br>
-            <button class="btn btn-dark" style="margin-left: 115px;">Register real Account</button></div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <br><br>
-
-  <!-----------------banner1--------------->
 
   <!-- ======= Footer ======= -->
   <footer>
