Make it responsive
All the content of the front page responsive

--- a/about.html
+++ b/about.html
@@ -116,6 +116,34 @@
   <br>
 <br>
   <!-----------------banner------------->
+  
+    <!------------Platform----------->
+  
+    <section>
+      <br>
+      <br>
+      <div class="container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <img class="img-fluid" src="assets/img/platform1.png" alt="Investment Advisory" >
+              <a href="#" class="platform1">Investment Advisory</a>
+            </div>
+            <div class="col-md-4">
+              <img class="img-fluid" src="assets/img/platform2.png" alt="Equity Oriented">
+              <a href="#" class="platform1">Equity Oriented</a>
+            </div>
+            <div class="col-md-4">
+              <img class="img-fluid" src="assets/img/platform3.png" alt="Risk Management">
+              <a href="#" class="platform1">Risk Management</a>
+            </div>
+          </div>
+        </div>  
+      </div>
+    </section>
+    
+  
+  <!------------Platform------------>
 
   <!-- ======= Footer ======= -->
   <footer>
@@ -126,7 +154,7 @@
             <div class="footer-content">
               <div class="footer-head">
                 <div class="footer-logo">
-                  <a href="index.html"><img src="assets/img/logo.png" alt="Nivesh_logo" ></a> 
+                  <a href="index.html"><img src="assets/img/logo_white.png" alt="Nivesh_logo" ></a> 
                 </div>
                 <p>
                    Your Partner in Liquidity and Systematic Trading Strategies.
@@ -170,7 +198,7 @@
           <div class="col-md-4">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>Instagram</h4>
+                <h4>portfolio</h4>
                 <div class="flicker-img">
                   <a href="#"><img src="assets/img/portfolio/1.jpg" alt=""></a>
                   <a href="#"><img src="assets/img/portfolio/2.jpg" alt=""></a>
