--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="about.html"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="">Our Story</a></li>
@@ -104,7 +104,7 @@
             <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
               <div class="carousel-container">
                 <div class="container">
-                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#398378;">Nivesh</span><span style="color: #e31e24;"> Vidha</span></h1>
+                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#e31e24;">Nivesh</span><span style="color:#398378; "> Vidha</span></h1>
                   <p class="animate__animated animate__fadeInUp">Your Partner in Liquidity and Systematic Trading Strategies</p>
                   <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                 </div>
@@ -114,7 +114,7 @@
             <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
               <div class="carousel-container">
                 <div class="container">
-                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#398378;">Nivesh</span><span style="color: #e31e24;"> Vidha</span></h1>
+                  <h1 class="animate__animated animate__fadeInDown">Welcome to <span style="color:#e31e24;">Nivesh</span><span style="color:#398378; "> Vidha</span></h1>
                   <p class="animate__animated animate__fadeInUp">Your Partner in Liquidity and Systematic Trading Strategies</p>
                   <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                 </div>
@@ -144,7 +144,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-7">
-              <h2 class="about_head">About Nivesh Vidha</h2>
+              <h2 class="about_head">About Nivesh <span style="color:#398378; "> Vidha</span></h2>
               <hr>
               <p class="about_Para">Nivesh Vidha is a trusted investment advisory firm focused on empowering individuals and organizations 
                 to achieve their financial goals. With our experienced team of professionals, we offer personalized investment solutions 
@@ -173,71 +173,100 @@
   </section>
   <!-------- about ------------>
 <!----- Best of Nivesh -->
+<br>
+<section class="fdb-block">
+  <div class="container">
+    <div class="style_container__Dzb4j">
+      <div class="row justify-content-center ">
+        <div class="col-12 text-center">
+          <h2 class="about_head">Maximize your Trading Potential</h2>
+          <hr>
+        </div>
+      </div>
+      <div class="row text-left align-items-center  ">
+        <div class="col-md-5">
+          <img alt="nivesh academy" class="img-fluid" src="assets/img/about/diversified-investment-portfolio_12.jpg" >
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 m-md-auto">
+          <h2 style="color: rgb(27, 117, 188);">Nivesh Vidha Trends</h2>
+          <p class="about_Para">
+            Nivesh Vidha Trends is the news and educational site of Nivesh Vidha Capital which provides real-time market updates, technical analysis, economic 
+            report, daily broadcasting and online webinars so you can stay ahead in the trading world. Get the latest market update now to begin 
+            your trading.
+          </p>
+          <p>
+            <a href="">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+          </p>
+        </div>
+      </div>
+      <div class="row text-left align-items-center  ">
+        <div class="col-10 col-sm-6 col-md-5 m-md-auto order-md-5">
+          <img alt="Nivesh_vidha academy" class="img-fluid " src="assets/img/about/629f0373a4c2e05a3938b159_Trading-vs-Investing.png" >
+        </div>
+        <div class="col-12 col-md-5">
+          <h2 style="color: rgb(27, 117, 188);">Nivesh Vidha Academy</h2>
+          <p class="about_Para">
+            Whether you are a complete beginner or an experienced trader, Nivesh Vidha Academy will transform you into a professional trader within a 
+            short period of time. Start learning the stocks market, forex trading and commodities today.
+          </p>
+          <p>
+            <a href="">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+          </p>
+        </div>
+      </div>
+      <div class="row text-left align-items-center  ">
+        <div class="col-10 col-md-5">
+          <img alt="nivesh Vidha  academy" class="img-fluid " src="assets/img/about/business-men-investing-iStock-1089940314.webp" >
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 m-md-auto">
+          <h2 style="color: rgb(27, 117, 188);">Trading Tools</h2>
+          <p class="about_Para">At Nivesh Vidha, we understand the vital part of the trader's success, primarily the 
+            ability to evaluate the patterns in trading data. To keep you updated with the latest market trends, we have a wide range of trading 
+            tools ranging from economic calendar, trading signals, technical analysis, to the daily market update.
+          </p>
+          <p>
+            <a href="/trading-tools/economic-calendar">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!---- Best Of Nivesh End-->
 
 
   <!----------------banner------------->
+<br>
+<br>
 
   <section>
-    <div class="container-fluid bannerback">
+    <div class="bannerback">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
             <h1 class="about1">Nivesh Vidha Partnership Programs</h1>
             <p class="about2">Take Advantage of our different market products and distinctive partnership programs. Accelerate your profitability, sales and transform your business to a new level.</p>
           </div>
-          <div class="col-md-4">
-            <img class="platform" src="assets/img/platform2.png" alt="platform2">
-          </div>
         </div>
-        
       </div>
     </div>
   </section>
   <br>
 <br>
   <!-----------------banner------------->
-
-    <!------------Platform----------->
-  
-    <section>
-      <div class="container-fluid"style="background-color: #f3f3f3;">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform1.png" alt="platform1" >
-              <a href="#" class="platform1">Investment Advisory</a>
-            </div>
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform2.png" alt="platform2">
-              <a href="#" class="platform1">Equity Oriented</a>
-            </div>
-            <div class="col-md-4">
-              <img class="platform" src="assets/img/platform3.png" alt="platform3">
-              <a href="#" class="platform1">Risk Management</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br>
-  
-  <!------------Platform------------>
-<br>
-<br>
   <!-----------------banner1-------------->
 
   <section>
     <div class="container-fluid">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <img src="assets/img/background/mobile.png" alt="mobile">
+          <div class="col-md-4">
+            <img src="assets/img/about/mobile-slant-left-1-816x1024.webp" alt="mobile">
           </div>
-          <div class="col-md-6">
-            <h3 style="margin-top: 70px;">Start your trading journey with Noor Capital</h3>
+          <div class="col-md-8">
+            <h3 style="margin-top: 70px;">Start your trading journey with <span style="color:#e31e24;">Nivesh</span><span style="color:#398378;"> Vidha</span></h3>
             <br>
             <p>
               <ul>
@@ -246,9 +275,9 @@
                 <li class="list"><i class="bi bi-check-circle"></i> Excellent Investment Advice</li>
               </ul>
             </p>
+            <br>
+            <a href="contact.html"><button class="btn btn-danger" style="margin-left:25px;">Contact Us</button></a> 
           </div>
-          <div class="col-md-3"><button class="btn btn-dark"style="margin-top: 120px;margin-left:115px">Try a Demo</button> <br><br>
-            <button class="btn btn-dark" style="margin-left: 115px;">Register real Account</button></div>
         </div>
       </div>
     </div>
@@ -266,7 +295,7 @@
             <div class="footer-content">
               <div class="footer-head">
                 <div class="footer-logo">
-                  <a href="index.html"><img src="assets/img/logo.png" alt="Nivesh_logo" ></a> 
+                  <a href="index.html"><img src="assets/img/logo.png" style="height:100px;" alt="Nivesh_logo" ></a> 
                 </div>
                 <p>
                    Your Partner in Liquidity and Systematic Trading Strategies.
